hphp/hack/test/package/package_access/package_relationship.php.exp.v2
error: Typing[4472] Cannot access class D defined in package pkg4 which may not be available [1]
-> D is defined in package_relationship.php--d.php [2]
-> D belongs to package pkg4 by this package override [3]
-> package pkg3 is available because the current file belongs to it by this package override [4]
-> pkg3 includes pkg2 via its definition [5]
-> pkg3 includes pkg2_soft via its definition [6]
-> pkg3 includes pkg1 via its definition [7]

package_relationship.php--c.php:7:13
         1 | <?hh
[4]      2 | <<file: __PackageOverride('pkg3')>> // package pkg3 (include pkg2)
         3 | <<__EntryPoint>>
         4 | function test(): void {
         5 |    $b = new B(); // ok
         6 |    $a = new A(); // ok by transitive inclusion
[1]      7 |    $d = new D(); // error
         8 | }

package_relationship.php--d.php:3:7
         1 | <?hh
[3]      2 | <<file: __PackageOverride('pkg4')>> // package pkg4
[2]      3 | class D {}

PACKAGES.toml:18:13
        16 | 
        17 | [packages.pkg3]
[5,6,7] 18 | includes = ["pkg2", "pkg2_soft", "pkg1"]
        19 | 
        20 | [packages.pkg4]

1 error found
